# repak-rivals

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml  flake.nix
.github/: auto_upload_to_nexus.yml  release-notes-runtime.md
.github/workflows/: dist-build-setup.yml  nexus.yml  release.yml
UAssetAPI/: AssetBinaryReader.cs  AssetBinaryWriter.cs  KawaiiPhysicsLegacyPorter.cs  MainSerializer.cs  UAsset.cs  UAssetAPI.csproj
UAssetAPI/CustomVersions/: CustomVersions.cs
UAssetAPI/ExportTypes/: MeshMaterials.cs  NormalExport.cs  SkeletalMeshExport.cs  SkeletalMeshStructs.cs  StaticMeshExport.cs  StringTableExport.cs  UserDefinedStructExport.cs
UAssetAPI/ExportTypes/Texture/: EBulkDataFlags.cs  FByteBulkData.cs  FByteBulkDataHeader.cs  FTexture2DMipMap.cs  FTexturePlatformData.cs  TextureExport.cs
UAssetAPI/JSON/: BitArrayJsonConverter.cs  FStringTableJsonConverter.cs
UAssetAPI/KawaiiPhysicsBinding/: KawaiiPhysicsBinding.csproj  Program.cs
UAssetAPI/Kismet/: KismetSerializer.cs
UAssetAPI/Kismet/Bytecode/: EExprToken.cs
UAssetAPI/Localization/: FTextLocalizationResource.cs
UAssetAPI/Pak/: RePak.cs
UAssetAPI/PropertyTypes/Objects/: ArrayPropertyData.cs  BoolPropertyData.cs  BytePropertyData.cs  DelegatePropertyData.cs  DoublePropertyData.cs  EnumPropertyData.cs  FloatPropertyData.cs  Int16PropertyData.cs  Int64PropertyData.cs  Int8PropertyData.cs  IntPropertyData.cs  MapPropertyData.cs  MulticastDelegatePropertyData.cs  NamePropertyData.cs  ObjectPropertyData.cs  PropertyData.cs  SetPropertyData.cs  SoftObjectPropertyData.cs  StrPropertyData.cs  TextPropertyData.cs  UInt16PropertyData.cs  UInt32PropertyData.cs  UInt64PropertyData.cs  UnknownPropertyData.cs
UAssetAPI/UnrealTypes/: EngineVersion.cs  FFieldPath.cs  FGameplayTagContainer.cs  FPackageIndex.cs  FString.cs  UE4VersionToObjectVersion.cs
UAssetAPI/Unversioned/: FUnversionedHeader.cs  Usmap.cs
docs/: build.md  gui.md  release-automation.md  retoc-rivals-cli.md  troubleshooting.md
nix/: deps.json  retoc-build.patch
oodle_loader/src/: lib.rs
rebnk/: Cargo.toml
rebnk/src/: entry.rs  error.rs  header.rs  lib.rs  utils.rs  wwise_reader.rs
rebnk/test_files/: example.bnk
rebnk/tests/: header_tests.rs  tests.rs
remat-rivals/: Cargo.toml
remat-rivals/src/: main.rs
repak/: Cargo.toml
repak-cli2/: Cargo.toml
repak-cli2/src/: main.rs  pack.rs  utils.rs
repak-cli2/wix/: main.wxs
repak-gui/: Cargo.toml  build.rs
repak-gui/src/: color.rs  file_table.rs  install_mod.rs  install_terminal.rs  ios_widget.rs  launch_game.rs  main.rs  main_ui.rs  pak_logic.rs  updater.rs  utils.rs  utoc_utils.rs  welcome.rs
repak/src/: data.rs  entry.rs  lib.rs  pak.rs  utils.rs
repak_cli/: Cargo.toml
repak_cli/src/: main.rs
retoc-rivals-cli/: Cargo.toml
retoc-rivals-cli/src/: archive.rs  cli.rs  config.rs  info.rs  iostore_ops.rs  kawaii_utils.rs  legacy.rs  main.rs  manifest.rs  pack.rs  source.rs  unpack.rs  util.rs
simd_str_cmp/: Cargo.toml
simd_str_cmp/benches/: compare_strings.rs
simd_str_cmp/src/: lib.rs
unreal-packaging-backend/: Cargo.toml
unreal-packaging-backend/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+29 files in other folders)
