[package]
name = "remat-rivals"
description = "Material and KawaiiPhysics editor for Marvel Rivals mod assets"
repository.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
keywords.workspace = true

[[bin]]
name = "remat-rivals"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
eframe = "0.31.1"
egui_plot = "0.31.0"
rfd = "0.15.2"
retoc = { path = "../retoc-rivals" }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
walkdir = "2.5.0"
