[package]
name = "retoc-rivals-cli"
description = "Utility for extracting and building Marvel Rivals IoStore mods"
repository.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
keywords.workspace = true

[[bin]]
name = "retoc-rivals-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
dirs = "6.0.0"
path-clean = "1.0.1"
repak = { path = "../repak", features = ["oodle", "encryption"] }
reqwest = { version = "0.13.3", features = ["blocking"] }
retoc = { path = "../retoc-rivals" }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tempfile = "3.17.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
unrar = "0.5.8"
walkdir = "2.5.0"
sevenz-rust2 = { version = "0.20.2", default-features = false, features = ["util"] }
zip = "2.6.1"
